<resources>
    <string name="app_name">LernyCode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log">Вход</string>
    <string name="reg">Регистрация</string>
    <string name="login">Войти</string>
    <string name="email">Почта</string>
    <string name="name">Никнейм</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="password_forgot">Забыли пароль?</string>
    <string name="register">Регистрация</string>
    <string name="profile">Профиль</string>
    <string name="share">Поделиться</string>
    <string name="invite">Пригласить друзей</string>
    <string name="settings_profile">Настройки</string>
    <string name="theme_color">Темная тема</string>
    <string name="theme_colorBlack">Темная тема</string>
    <string name="changeTitle">Изменить заглавие</string>
    <string name="vocab">Словарь</string>
    <string name="fontSize">Размер шрифта</string>
    <string name="favourite">Добавить в закладки</string>
    <string name="sett_account">АККАУНТ</string>
    <string name="sett_redProf">Редактировать профиль</string>
    <string name="sett_changePass">Изменить пароль</string>
    <string name="sett_settings">НАСТРОЙКИ</string>
    <string name="sett_notification">Уведомления</string>
    <string name="sett_sound">Звук</string>
    <string name="sett_soundExpTrue">Выключить звук в приложении</string>
    <string name="sett_soundExpFalse">Включить звук в приложении</string>
    <string name="sett_exit">Выход из аккаунта</string>
    <string name="avatar_change">Изменить аватар</string>
    <string name="prof_name">Имя</string>
    <string name="prof_email">Почта</string>
    <string name="save">Сохранить</string>
    <string name="error_email">Такая почта уже зарегистрирована!</string>
    <string name="stat">Моя статистика</string>
    <string name="open_all">Еще</string>
    <string name="curse">Курс пройден на:</string>
    <string name="time_in_app">Время в приложении: </string>
    <string name="hours">часов</string>
    <string name="minutes">минут</string>
    <string name="seconds">секунд</string>
    <string name="my_achieve">Мои достижения</string>
    <string name="old_password">Введите старый пароль</string>
    <string name="new_password">Введите новый пароль</string>
    <string name="new_password_again">Повторите новый пароль</string>
    <string name="new_password_error">Пароли не совпадают!</string>
    <string name="old_password_error">Пароль неверен!</string>
    <string name="group1">Знакомство с С#</string>
    <string name="group2">Основы программирования на C#</string>
    <string name="group3">Классы. Объектно-ориентированное программирование</string>
    <string name="button1">Знакомство с языком</string>
    <string name="button2">Структура и переменные</string>
    <string name="button3">Литералы</string>
    <string name="button4">Типы данных</string>
    <string name="button5">Консольный ввод-вывод</string>
    <string name="button6">Арифметические операции</string>
    <string name="button7">Поразрядные операции</string>
    <string name="button8">Операции присваивания</string>
    <string name="button9">Преобразования типов данных</string>
    <string name="button10">Условные выражения</string>
    <string name="button11">Условные конструкции</string>
    <string name="button12">Циклы</string>
    <string name="button13">Массивы</string>
    <string name="button14">Методы</string>
    <string name="button15">Параметры методов</string>
    <string name="button16">Классы и объекты</string>
    <string name="button17">Структуры</string>
    <string name="taskFirst">Основные задания</string>
    <string name="seeAll"><u>Посмотреть все -></u></string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="enterCode">Вставьте код снизу</string>
    <string name="stat_timeApp">Время в приложении:</string>
    <string name="stat_countTask">Количество пройденных заданий:</string>
    <string name="stat_countLect">Количество пройденных лекций:</string>
    <string name="stat_timeLect">Времени затрачено на лекции:</string>
    <string name="stat_timeTask">Времени затрачено на задания:</string>
    <string name="task1_taskText1">Первое что надо сделать в любой программе - определить нужные переменные. Определим переменные, которые понадобятся нам для дальнейшей работы.</string>
    <string name="task1_codeText1">В первой строке объявите переменную "number" с типом char \nВ следующей строке переменную "count" с типом int \nИ наконец переменную "sNumber" с типом string</string>
    <string name="task1_taskText2">Теперь надо задать нашим переменным значения. По условию задания зададим переменной типа string значение "82347273312", переменная number у нас будет отвечать за цифру, которую мы ищем, поэтому присвоем ей значение 3, а count - счетчик, будет идти с нулевого значения</string>
    <string name="task1_codeText2">Присвойте переменным значения: </string>
    <string name="task1_taskText3">Теперь напишем цикл for, в котором зададим нужные параметры.</string>
    <string name="task1_codeText3">Присвойте параметрам цикла for правильные значения </string>
    <string name="task1_taskText4">После того как наш цикл написан, требуется написать условие, которое будет высчитывать количество нужных нам цифр в заданной строке. Для этого нам требуется сравнить каждый символ строки по очереди с цифрой которую мы ищем. А если найдем такую, то требуется увеличить наш счетчик на один </string>
    <string name="task1_codeText4">Вставьте правильние значения в ячейки ниже</string>
    <string name="task1_taskText5">И осталось вывести правильный ответ, наш счетчик, который покажет сколько раз определенная цифра появлялась в нашей строке</string>
    <string name="task1_codeText5">Вставьте правильную переменную, которую требуется вывести</string>
    <string name="task1_taskText6">Вы молодец! Задание выполнено успешно, теперь можете посмотреть на весь код, который у вас получился</string>
    <string name="lesson1_text_page1_1">На сегодняшний момент язык программирования C# один из самых мощных, быстро развивающихся и востребованных языков в ИТ-отрасли. В настоящий момент на нем пишутся самые различные приложения: от небольших десктопных программок до крупных веб-порталов и веб-сервисов, обслуживающих ежедневно миллионы пользователей.\n\nC# уже не молодой язык и кFк и вся платформа .NET уже прошел большой путь. Первая версия языка вышла вместе с релизом Microsoft Visual Studio .NET в феврале 2002 года. Текущей версией языка является версия C# 9.0, которая вышла 10 ноября 2020 года вместе с релизом .NET 5.\n\nC# является языком с Си-подобным синтаксисом и близок в этом отношении к C++ и Java. Поэтому, если вы знакомы с одним из этих языков, то овладеть C# будет легче.\n\nC# является объектно-ориентированным и в этом плане много перенял у Java и С++. Например, C# поддерживает полиморфизм, наследование, перегрузку операторов, статическую типизацию. Объектно-ориентированный подход позволяет решить задачи по построению крупных, но в тоже время гибких, масштабируемых и расширяемых приложений. И C# продолжает активно развиваться, и с каждой новой версией появляется все больше интересных функциональностей, как, например, лямбды, динамическое связывание, асинхронные методы и т.д.</string>
    <string name="lesson1_text_page2_1">К каким языка ближе всего C#?</string>
    <string name="lesson1_text_page3_1">Когда говорят C#, нередко имеют в виду технологии платформы .NET (Windows Forms, WPF, ASP.NET, Xamarin). И, наоборот, когда говорят .NET, нередко имеют в виду C#. Однако, хотя эти понятия связаны, отождествлять их неверно. Язык C# был создан специально для работы с фреймворком .NET, однако само понятие .NET несколько шире. \n\n Как-то Билл Гейтс сказал, что платформа .NET - это лучшее, что создала компания Microsoft. Возможно, он был прав. Фреймворк .NET представляет мощную платформу для создания приложений. Можно выделить следующие ее основные черты: \n\n <b>• Поддержка нескольких языков</b> Основой платформы является общеязыковая среда исполнения Common Language Runtime (CLR), благодаря чему .NET поддерживает несколько языков: наряду с C# это также VB.NET, C++, F#, а также различные диалекты других языков, привязанные к .NET, например, Delphi.NET. При компиляции код на любом из этих языков компилируется в сборку на общем языке CIL (Common Intermediate Language) - своего рода ассемблер платформы .NET. Поэтому при определенных условиях мы можем сделать отдельные модули одного приложения на отдельных языках.\n\n<b>• Кроссплатформенность.</b> .NET является переносимой платформой (с некоторыми ограничениями). Например, последняя версия платформы на данный момент - .NET 5 поддерживается на большинстве современных ОС Windows, MacOS, Linux. Используя различные технологии на платформе .NET, можно разрабатывать приложения на языке C# для самых разных платформ - Windows, MacOS, Linux, Android, iOS, Tizen.\n\n<b>• Мощная библиотека классов.</b> .NET представляет единую для всех поддерживаемых языков библиотеку классов. И какое бы приложение мы не собирались писать на C# - текстовый редактор, чат или сложный веб-сайт - так или иначе мы задействуем библиотеку классов .NET.\n\n<b>• Разнообразие технологий.</b> Общеязыковая среда исполнения CLR и базовая библиотека классов являются основой для целого стека технологий, которые разработчики могут задействовать при построении тех или иных приложений. Например, для работы с базами данных в этом стеке технологий предназначена технология ADO.NET и Entity Framework Core. Для построения графических приложений с богатым насыщенным интерфейсом - технология WPF и UWP, для создания более простых графических приложений - Windows Forms. Для разработки мобильных приложений - Xamarin. Для создания веб-сайтов и веб-приложений - ASP.NET и т.д.

К этому стоит добавить активной развивающийся и набирающий популяность Blazor - фреймворк, который работает поверх .NET и который позволяет создавать веб-приложения как на стороне сервера, так и на стороне клиента. А в будущем будет поддерживать создание мобильных приложений и, возможно, десктоп-приложений.\n\n<b>Производительность.</b> Согласно ряду тестов веб-приложения на .NET 5 в ряде категорий сильно опережают веб-приложения, построенные с помощью других технологий. Приложения на .NET 5 в принципе отличаются высокой производительностью.\n\nТакже еще следует отметить такую особенность языка C# и фреймворка .NET, как автоматическая сборка мусора. А это значит, что нам в большинстве случаев не придется, в отличие от С++, заботиться об освобождении памяти. Вышеупомянутая общеязыковая среда CLR сама вызовет сборщик мусора и очистит память.</string>
</resources>