<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassFragment"
    android:id="@+id/changePass"
    android:background="@color/grey">


    <TextView
        android:id="@+id/oldPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/old_password"
        android:textColor="@color/white_inactive"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oldPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password_error"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/oldPasswordText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oldPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:maxLines="1"
        android:textCursorDrawable="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordText" />

    <TextView
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/new_password"
        android:textColor="@color/white_inactive"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordEdit" />

    <TextView
        android:id="@+id/newPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/new_password_error"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordEdit" />

    <EditText
        android:id="@+id/newPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textCursorDrawable="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordError" />

    <TextView
        android:id="@+id/newPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/new_password_again"
        android:textColor="@color/white_inactive"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEdit" />



    <EditText
        android:id="@+id/newPasswordAgainEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textCursorDrawable="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordAgain" />



    <TextView
        android:id="@+id/savePassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/yellow_inactive"
        android:textSize="14sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordAgainEdit"
        />



</androidx.constraintlayout.widget.ConstraintLayout>