<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:id="@+id/main_fragment"

    android:orientation="vertical"
    android:background="@color/grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_back"
        app:menu="@menu/task_menu">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Статистика"
            android:textColor="@color/white"
            android:textSize="18sp"/>


    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"

        >

        <TextView
            android:id="@+id/statTimeAppText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/stat_timeApp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statTimeAppCode"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="0 ч. 0 м. 0 с."
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statCountTaskText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/stat_countTask"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statTimeAppText" />

        <TextView
            android:id="@+id/statCountTaskCode"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="0/6 шт"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/statTimeAppCode"
            app:layout_constraintTop_toBottomOf="@+id/statTimeAppText" />

        <TextView
            android:id="@+id/statCountLectText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/stat_countLect"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statCountTaskText" />

        <TextView
            android:id="@+id/statCountLectCode"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="0/7 шт"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/statTimeAppCode"
            app:layout_constraintTop_toBottomOf="@+id/statCountTaskCode" />

        <TextView
            android:id="@+id/statTimeTaskText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/stat_timeTask"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statCountLectText" />

        <TextView
            android:id="@+id/statTimeTaskCode"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="0 ч. 0 м. 0 с."
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/statTimeAppCode"
            app:layout_constraintTop_toBottomOf="@+id/statCountLectCode" />


        <TextView
            android:id="@+id/statTimeLectText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/stat_timeLect"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statTimeTaskText" />

        <TextView
            android:id="@+id/statTimeLectCode"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="0 ч. 0 м. 0 с."
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/statTimeAppCode"
            app:layout_constraintTop_toBottomOf="@+id/statTimeTaskCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>